# Newspaper-Generator

./: .gitignore  LICENSE  README.md  eslint.config.mjs  package.json
.github/workflows/: build.yml
desktop/: .gitignore  README.md  package-lock.json  package.json  postcss.config.js  vite.config.js
desktop/.github/workflows/: build.yml
desktop/scripts/: build-macos.sh  build-windows.ps1  download-fonts.js  push-to-github.sh
desktop/scripts/install/: install-macos.sh  install-windows.ps1
desktop/src/: i18n.js  index.html  main.js  styles.css  themes.js  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/sidecars/playwright-export/: export.js  package-lock.json  package.json
desktop/src-tauri/src/: errors.rs  lib.rs  main.rs
scripts/: push-to-github.sh
src/app/: layout.tsx  page.tsx
src/app/api/export-png/: route.ts
src/components/newspaper/: article-list.tsx  newspaper-preview.tsx  number-input.tsx  settings-panel.tsx  toolbar.tsx
src/lib/newspaper/: store.ts  types.ts
